# pip-uploader

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-linux.yml
docs/: developer_workflow.md  developer_workflow_2.md  release_workflow.md
