[project]
name = "pip-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko-ng>=2.9.0",
    "pyinstaller>=6.14.0",
    "pyqt6>=6.9.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
